<resources>
    <string name="app_name">Cart</string>
    <string name="cart">cart</string>
    <string name="scan899">scan</string>
    <string name="tutorial">tutorial</string>
    <string name="start_shopping">start_shopping</string>
    <string name="name999">name</string>
    <string name="price244">price</string>
    <string name="textview">textview</string>

    <string name="welcome_nto_nbest_price">Welcome\nTO\nBEST PRICE</string>

    <string name="scan">Scan</string>
    <string name="cancel">Cancel</string>
    <string name="barcode_scanner">Barcode Scanner</string>
    <string name="product_information">Product Information</string>
    <string name="coca_cola_ncoke_n1_litre">Coca Cola\nCoke\n1 Litre</string>
    <string name="r20_00">R20.00</string>
    <string name="confirm">Confirm</string>
    <string name="coke_1_litre_nfanta_grape_nmarie_nnik_naks">Coke 1 litre\nFanta Grape\nMarie\nNik Naks</string>
    <string name="remove">Remove</string>
    <string name="r20_00_nr15_00_nr10_00_nr5_00">R20.00\nR15.00\nR10.00\nR5.00</string>
    <string name="total_amount">Total Amount</string>
    <string name="r50_00">R50.00</string>
    <string name="checkout">Checkout</string>
    <string name="previous">Previous</string>
    <string name="ccoca_cola_ncoke_n1_litre">Coca Cola\nCoke\n1 litre</string>
    <string name="r120_00">R20.00</string>
    <string name="barcode_of_a_product">barcode of a product</string>

    <string name="scan_nproduct">Scan\nProduct</string>
    <string name="qrcode_scanner">QRCode Scanner</string>
    <string name="name">Name</string>
    <string name="price">Price</string>

    <string name="save">save</string>
    <string name="todojh">TODO</string>
    <string name="display">display</string>
    <string name="update">update</string>
    <string name="product_number">product_number</string>
    <string name="counter">counter</string>
    <string name="total">Total :</string>
    <string name="edit">Edit</string>


    <string-array name="products">
        <item>Sensodyne Toothpaste</item>
        <item>Playboy\nDeodorant\nAntlantis</item>
        <item>Coke\n2litre</item>
        <item>Danone Clover 1kg</item>
        <item>Dairy\nMilk\nChocolate 80g</item>
        <item>Colgate\nToothpaste</item>
        <item>Airoma\nfloral fusion lm</item>
        <item>Baby Soft\nToilet tissue \nFresh White</item>
        <item>Full cream milk\n6x1 Litre</item>
        <item>Corn Flakes</item>
        <item>Kellogs\nSpecial Protein \nHoney Almond</item>
        <item>Lucky Star\nPilchards\nTomato Sauce</item>
        <item>Nivea\nCare Shower\nHappiness 500ml </item>
        <item>Oreo\nNew Choco \nbrownie flavour</item>
        <item>Robertsons Spice\nSteak and Chops</item>
    </string-array>
    <string-array name="prices">
        <item>R40.00</item>
        <item>R29.99</item>
        <item>R20.99</item>
        <item>R28.00</item>
        <item>R15.00</item>
        <item>R39.99</item>
        <item>R29.99</item>
        <item>R49.98</item>
        <item>R71.25</item>
        <item>R38.98</item>
        <item>R46.04</item>
        <item>R18.25</item>
        <item>R38.99</item>
        <item>R8.99</item>
        <item>R29.98</item>
    </string-array>

    <string-array name="text">
        <item>Welcome\nTo\nBest Price</item>
        <item>Shop\nWith\nUs</item>
    </string-array>


    <string-array name="removeText">
        <item>Long</item>
        <item>Click</item>
        <item>To</item>
        <item>Remove</item>
    </string-array>
    <string name="title_activity_home2">Home2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_nav_home">NavHomeActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
